# journeyatlas

./: .gitignore  .pre-commit-config.yaml  README.md  next.config.mjs  next.config.ts  package-lock.json  package.json  project.yml  vercel.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dependency-quarantine.yml  release-attestations.yml  security-scan.yml
AtlasMasaIOS/: AtlasMasaIOS.entitlements  Info.plist
AtlasMasaIOS/Sources/App/: AtlasMasaIOSApp.swift
AtlasMasaIOS/Sources/Core/: APIClient.swift  AppEnvironment.swift  Models.swift  SessionStore.swift
AtlasMasaMacOS/: Info.plist
AtlasMasaMacOS/Sources/App/: AtlasMasaMacOSApp.swift  RootDashboardView.swift
AtlasMasaMacOS/Sources/Core/: AppEnvironment.swift  AtlasResearchPack.swift  LocalReasoningEngine.swift  Models.swift  SessionStore.swift
AtlasMasaMacOS/Tests/: AtlasMasaMacOSTests.swift
app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts
app/contact/: page.tsx
app/faq/: page.tsx
app/guides/: page.tsx
app/guides/[slug]/: page.tsx
app/policies/: page.tsx
apps/website/: README.md
artifacts/swift-travel-design-model/: latest.json
artifacts/swift-travel-design-model/20260221T105529Z/: manifest.json  metrics.json  model.json
artifacts/swift-travel-design-model/20260221T105627Z/: manifest.json  metrics.json  model.json
artifacts/swift-travel-design-model/20260221T105907Z/: manifest.json  metrics.json  model.json
atlas-concierge/: .gitignore  Cargo.toml  Dockerfile  README.md
atlas-concierge/config/: model.toml
atlas-concierge/crates/agents/: Cargo.toml
atlas-concierge/crates/agents/src/: lib.rs
atlas-concierge/crates/api/: Cargo.toml
atlas-concierge/crates/api/src/: lib.rs  main.rs  rate_limit.rs
atlas-concierge/crates/cli/: Cargo.toml
atlas-concierge/crates/cli/src/: local_reasoner.rs  main.rs
atlas-concierge/crates/core/: Cargo.toml
atlas-concierge/crates/core/src/: intent.rs  lib.rs  models.rs  planner.rs  policy.rs
atlas-concierge/crates/ml/: Cargo.toml
atlas-concierge/crates/ml/src/: burn_impl.rs  centroid.rs  fallback.rs  lib.rs
atlas-concierge/crates/observability/: Cargo.toml
atlas-concierge/crates/observability/src/: lib.rs
atlas-concierge/crates/retrieval/: Cargo.toml
atlas-concierge/crates/retrieval/src/: chunking.rs  lib.rs  tokenize.rs
atlas-concierge/crates/storage/: Cargo.toml
atlas-concierge/crates/storage/src/: lib.rs
atlas-concierge/crates/tests/: Cargo.toml
atlas-concierge/crates/tests/src/: lib.rs
atlas-concierge/crates/tests/tests/: api_integration.rs
atlas-concierge/docs/: RUNBOOK.md
atlas-concierge/kb/faq/: customer-faq.md  pricing-packages.md
atlas-concierge/kb/guides/: beach-weekend.md  desert-routine.md  north-green.md
atlas-concierge/kb/ops/: cleaning-sop.md  gear-kit-checklist.md  turnover-sop.md
atlas-concierge/kb/policies/: service-policies.md
atlas-concierge/kb/research/: hebrew-web-sources-2026-02-14.md  israel-rv-service-points-he.json  rv-service-points-he.md
atlas-concierge/kb/training/: intent_he.jsonl  local_reasoner_training.jsonl  local_reasoner_training_science.jsonl  openalex_atlas_queries.txt  scientific_papers_seed.jsonl
atlas-concierge/migrations/: 0001_init.sql  0002_auth_billing_notes.sql
atlas-concierge/scripts/: hebrew_sources_manifest.txt  refresh_hebrew_sources.sh
components/: GuideCard.tsx  ProductCard.tsx  SiteFooter.tsx  SiteHeader.tsx  WhatsAppButton.tsx
content/guides/: TEMPLATE.md  galil-maayanot-3yamim.md  hof-carmel-reset-3yamim.md  israel-beaches-4seas.md  negev-sheket-sfash-2yamim.md
docs/: guides-workflow.md
docs/ai/: local-model-training.md  local-reasoner-model-report.md  personalization-training-playbook.md  swift-scientific-corpus-pipeline.md  swift-scientific-corpus-report.md  swift-travel-design-model-report.md
docs/operations/: api-production-deploy.md  apple-signin-website.md  local-concierge-quickstart.md  production-gap-checklist.md  release-readiness-report.md  testflight-quickstart.md  yasha-day1-playbook-2026-02-16.md
docs/prompt-series/: 001-infrastructure-floor.md  002-iaas-core.md  003-cost-recovery-pricing.md  004-interior-build-35k.md  005-trials-first.md  006-dual-entry-platform.md  008-free-travel-help-hebrew-site.md  009-why-without-hotels.md  010-movement-first-ecosystem.md  011-ai-speed-web-studio.md
docs/security/: post-solarwinds-model.md  repository-hardening.md
homepage/: concierge-local.html  contact.html  faq.html  guides.html  homepage.html  index.html  mobility-theory.html  policies.html  pricing.html  sitewide-language.js  styles.css  vans-company-future.html
homepage/content/: mobility-theory.i18n.json
homepage/guides/: desert-routine-guide.html  israel-beaches-4seas.html  north-green-guide.html  sitewide-language.js
ios-app/: README.md  project.yml
ios-app/AtlasMasaIOS.xcodeproj/: project.pbxproj
lib/: guides.ts  markdown.ts  site.ts  whatsapp.ts
macos-app/: README.md  project.yml
macos-app/AtlasMasaMacOS/: AtlasMasaMacOS.entitlements  Info.plist
macos-app/AtlasMasaMacOS.xcodeproj/: project.pbxproj
scripts/: build_swift_research_corpus.py  dependency-quarantine-check.sh  fetch_openalex_atlas_papers.py  generate-apple-client-secret.sh  serve-homepage-local.sh  start-concierge-local.sh  train-local-model-loop.sh  train-swift-science-loop.sh  train_swift_travel_design_model.py  verify-dependency-pr-scope.sh  verify-github-actions-pinning.sh  verify-lockfiles.sh  verify-workflow-trust-boundaries.sh
website/: README.md  auth-portal.js  concierge-local.html  contact.html  faq.html  guides.html  homepage.html  mobility-theory.html  policies.html  pricing.html  signin.html  signup.html  sitewide-language.js  styles.css  tool-briefing.html  tool-chat.html  tool-memory.html  tool-notes.html  tool-pages.css  tool-pages.js  tool-survey.html  tool-trip.html  tool-voice.html  vans-company-future.html
website/content/: mobility-theory.i18n.json
website/guides/: desert-routine-guide.html  israel-beaches-4seas.html  north-green-guide.html
(+96 files in other folders)
