[package]
name = "atlas-agents"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
atlas-core = { path = "../core" }
atlas-ml = { path = "../ml" }
atlas-observability = { path = "../observability" }
atlas-retrieval = { path = "../retrieval" }
atlas-storage = { path = "../storage" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid.workspace = true
