[package]
name = "atlas-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
atlas-agents = { path = "../agents" }
atlas-core = { path = "../core" }
atlas-ml = { path = "../ml" }
atlas-observability = { path = "../observability" }
atlas-retrieval = { path = "../retrieval" }
atlas-storage = { path = "../storage" }
axum.workspace = true
chrono.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
