[package]
name = "atlas-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
atlas-agents = { path = "../agents" }
atlas-core = { path = "../core" }
atlas-ml = { path = "../ml", features = ["burn-ml"] }
atlas-observability = { path = "../observability" }
atlas-retrieval = { path = "../retrieval" }
atlas-storage = { path = "../storage" }
axum.workspace = true
base64 = "0.22"
chrono.workspace = true
hmac = "0.12"
parking_lot.workspace = true
rand = "0.9"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
url = "2.5"
uuid.workspace = true
webauthn-rs = "0.5"
