[package]
name = "atlas-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
atlas-api = { path = "../api" }
atlas-agents = { path = "../agents" }
atlas-core = { path = "../core" }
atlas-retrieval = { path = "../retrieval" }
atlas-storage = { path = "../storage" }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
uuid.workspace = true
